--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ header .header-1 .searchMobile{
     top: -1000px;
     position: absolute;
     transition: 1s;
-    z-index: 400;
+
 }
 
 .sidenav ul{
@@ -221,7 +221,7 @@ header .header-1 .searchMobile{
 
 /* Sidenav Active */
 .sidenav.active{
-    top: 0;
+    top: 60px;
     transition: 1s;
 }
 
