--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header .header-1{
 header .header-1 .burger{
     cursor: pointer;
     display: none;
+    z-index: 100;
 }
 
 header .header-1 .burger .bars1{
@@ -187,6 +188,7 @@ header .header-1 .searchMobile{
     top: -1000px;
     position: absolute;
     transition: 1s;
+    z-index: 100;
 
 }
 
@@ -221,8 +223,9 @@ header .header-1 .searchMobile{
 
 /* Sidenav Active */
 .sidenav.active{
-    top: 60px;
+    top: 70px;
     transition: 1s;
+    z-index: 100;
 }
 
 
