--- a/style.css
+++ b/style.css
@@ -246,7 +246,6 @@ header .header-1 .searchMobile{
 }
 
 .bannerTop .contentBanner h3{
-    position: absolute;
     top: 5px;
     left:6px;
     color: var(--light-gray);
@@ -261,7 +260,6 @@ header .header-1 .searchMobile{
     height: .6px;
     position: absolute;
     bottom: 0;
-
 }
 
 .banneranime .box{
@@ -273,13 +271,38 @@ header .header-1 .searchMobile{
     text-align: center;
 }
 
-.banneranime .box .image{
+.banneranime .box .contentBx{
+    height: 20rem;
+    background: #fff;
+    position: relative;
+}
+
+.banneranime .box .contentBx .image:hover .overlay{
+    background-color: rgba(185, 218, 220, .9);
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+
+.banneranime .image{
+    width: 100%;
+    height: 100%;
+
 }
 
 .banneranime .box .image img{
     width: 100%;
+    height: 100%;
 }
+
+.banneranime .box .content{
+    position: relative;
+    top: 20px;
+    text-align: left;
+}
+
 
 
 
