--- a/style.css
+++ b/style.css
@@ -245,8 +245,11 @@ header .header-1 .searchMobile{
     position: relative;
     width: 900px;
     overflow: hidden;
+    height: 25rem;
 }
+/* Banner top */
 
+/* h3 banner */
 .bannerTop .contentBanner h3{
     top: 5px;
     left:6px;
@@ -263,8 +266,9 @@ header .header-1 .searchMobile{
     position: absolute;
     bottom: 0;
 }
+/* h3 end banner top */
 
-
+/* Banner Top ( Swiper Js ) */
 .bannerAnime .boxContent{
     position: relative;
     overflow:hidden;
@@ -279,6 +283,7 @@ header .header-1 .searchMobile{
     width: 10rem;
     position: relative;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .bannerAnime .boxContent .contentImg img{
@@ -293,7 +298,6 @@ header .header-1 .searchMobile{
     color: var(--muted-font);
 }
 
-
 .bannerAnime .boxContent:hover .contentImg .overlay span{
     display: block;
 }
@@ -301,18 +305,29 @@ header .header-1 .searchMobile{
 .bannerAnime .boxContent .contentText{
     margin-top: 10px;
     text-align: left;
+    position: relative;
+    height: 6rem;
 }
 
 .bannerAnime .boxContent .contentText h4{
     color: var(--primary-font);
     text-transform: capitalize;
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 400px;
 }
 
 .bannerAnime .boxContent .contentText p{
     color: var(--muted-font);
     text-transform: capitalize;
+    position:absolute;
+    top: 19px;
+    left: 0;
 }
+/* End Banner 1 ( Swiper js ) */
 
+/* Overlay Banner 1 */
 .bannerAnime .boxContent:hover .contentImg .overlay{
     background-color: rgba(185, 218, 220, .9);
     width: 100%;
@@ -325,21 +340,71 @@ header .header-1 .searchMobile{
     display: flex;
     align-items: center;
 }
+/* End Overlay Banner 1 */
 
-
-
-
-
-
-
-
-
+/* Content Sider */
 .bannerTop .contentSider{
     background: var(--content);
     padding: 20px;
     width: 270px;
 }
 
+.bannerTop .contentSider h3{
+    color: var(--white);
+    text-transform: capitalize;
+}
+
+.bannerTop .contentSider .siderAnime {
+    margin-top: 10px;
+}
+
+.bannerTop .contentSider .siderAnime .content{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    margin-top: 6px;
+}
+
+.bannerTop .contentSider .siderAnime .content::before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: var(--primary-font);
+    position: absolute;
+    bottom: 0;
+}
+
+.bannerTop .contentSider .siderAnime .content .image{
+    margin-right: 3px;
+}
+
+.bannerTop .contentSider .siderAnime .content h4{
+    color: var(--primary-font);
+    text-transform: capitalize;
+}
+
+.bannerTop .contentSider .siderAnime .content h5{
+    color: var(--primary-font);
+    margin-top: 7px;
+    text-transform: capitalize;
+    margin-bottom: 7px;
+}
+
+.bannerTop .contentSider .siderAnime .content p{
+    color: var(--primary-font);
+    margin-top: 7px;
+    text-transform: capitalize;
+    margin-bottom: 7px;
+    font-size: .8rem;
+}
+/* End sider */
+
+
+
+/* Second banner */
+.secondBanner{
+    margin-top: -20rem;
+}
 
 
 
@@ -387,6 +452,12 @@ header .header-1 .searchMobile{
         height: 15rem;
         width: 10rem;
     }
+
+    /* Second banner */
+    .secondBanner{
+        margin-top: -5rem;
+    }
+    
 }
 
 
@@ -395,11 +466,19 @@ header .header-1 .searchMobile{
         height: 10rem;
         width: 10rem;
     }
+    .bannerTop .contentBanner{
+        height: 17rem;
+    }
 }
 
 
 @media(max-width:486px){
     header .header-1 .logo{
         margin-left: 10%;
+    }
+
+    .bannerAnime .boxContent .contentImg{
+        height: 9rem;
+        width: 9rem;
     }
 }
