--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 body{
     height: 9000px;
     background: var(--body-bg);
-    ffont-family: 'Dongle', sans-serif;
+    font-family: 'Dongle', sans-serif;
     font-family: 'Inter', sans-serif;
     font-family: 'Neonderthaw', cursive;
     font-family: 'Poppins', sans-serif;
@@ -480,11 +480,13 @@ header .header-1 .searchMobile{
 .secondBanner .secondContent .contentBx{
     width: 450px;
     height: 250px;
+    position: relative;
 }
 
 .secondBanner .secondContent .contentBx .images{
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .secondBanner .secondContent .contentBx .images img{
@@ -496,6 +498,74 @@ header .header-1 .searchMobile{
     width: 0px;
     visibility: hidden;
 }
+
+.secondBanner .secondContent .contentBx .images .watch{
+    top: 10px;
+    left: 10px;
+}
+
+.secondBanner .secondContent .contentBx .images .watch span:nth-child(2){
+    position: absolute;
+    padding: 5px 8px;
+    border-radius: 5px;
+    color: var(--white);
+    top: 150px;
+    font-size: 1.1rem;
+    width: 300px;
+    font-weight: 800;
+    text-transform: capitalize;
+}
+
+.secondBanner .secondContent .contentBx .images .watch span:nth-child(3){
+    position: absolute;
+    padding: 5px 8px;
+    border-radius: 5px;
+    color: var(--white);
+    top: 180px;
+    font-size: 1rem;
+    width: 300px;
+    font-weight: 800;
+    text-transform: capitalize;
+}
+
+.secondBanner .secondContent .contentBx .images .watch span:nth-child(4){
+    position: absolute;
+    padding: 5px 8px;
+    border-radius: 5px;
+    color: var(--white);
+    top: 185px;
+    right: 20px;
+    font-size: .8rem;
+    width: 300px;
+    font-weight: 800;
+    text-transform: capitalize;
+    background: red;
+    width: 135px;
+}
+
+.label{
+    position: absolute;
+    background: orange;
+    color: var(--white);
+    left: 10px;
+    top: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    text-transform: capitalize;
+}
+
+.secondBanner .secondContent .contentBx .images .watch span:nth-child(3) i{
+    color: yellow;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -570,7 +640,7 @@ header .header-1 .searchMobile{
 
     .secondBanner .secondContent .contentBx{
         width: 400px;
-        height: 200px;
+        height: 250px;
     }
     
 }
@@ -595,7 +665,7 @@ header .header-1 .searchMobile{
 
     .secondBanner .secondContent .contentBx{
         width: 150px;
-        height: 150px;
+        height: 250px;
     }
     
 }
