--- a/style.css
+++ b/style.css
@@ -581,6 +581,14 @@ header .header-1 .searchMobile{
 
 .listAnime .lists .content .images{
     margin-right: 10px;
+    width: 200px;
+    height: 130px;
+}
+
+.listAnime .lists .content .images img{
+    margin-right: 10px;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -731,6 +739,12 @@ header .header-1 .searchMobile{
         grid-template-columns: repeat(auto-fit, minmax(150px, 3fr));
         max-width: 900px;
         padding: 2px; 
+    }
+
+    .listAnime .lists .content .images{
+        margin-right: 10px;
+        width: 130px;
+        height: 130px;
     }
     
 
