--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ header .header-1 .searchMobile{
 .bannerAnime .boxContent .contentImg .overlay span{
     position: absolute;
     display: none;
-    color: var(--muted-font);
+    color: var(--white);
 }
 
 .bannerAnime .boxContent:hover .contentImg .overlay span{
@@ -351,7 +351,7 @@ header .header-1 .searchMobile{
 
 /* Overlay Banner 1 */
 .bannerAnime .boxContent:hover .contentImg .overlay{
-    background-color: rgba(185, 218, 220, .9);
+    background-color: rgba(115, 115, 115, .6);
     width: 100%;
     top: 0;
     left: 0;
@@ -510,11 +510,17 @@ header .header-1 .searchMobile{
     padding: 5px 8px;
     border-radius: 5px;
     color: var(--white);
-    top: 150px;
+    top: 175px;
     font-size: 1.1rem;
     width: 300px;
     font-weight: 800;
     text-transform: capitalize;
+    cursor: default;
+}
+
+
+.secondBanner .secondContent .contentBx .images .watch i{
+    margin-right: 10px;
 }
 
 .secondBanner .secondContent .contentBx .images .watch span:nth-child(3){
@@ -522,11 +528,12 @@ header .header-1 .searchMobile{
     padding: 5px 8px;
     border-radius: 5px;
     color: var(--white);
-    top: 180px;
+    top: 215px;
     font-size: 1rem;
     width: 300px;
-    font-weight: 800;
+    font-weight: 400;
     text-transform: capitalize;
+    cursor: default;
 }
 
 .secondBanner .secondContent .contentBx .images .watch span:nth-child(4){
@@ -534,17 +541,17 @@ header .header-1 .searchMobile{
     padding: 5px 8px;
     border-radius: 5px;
     color: var(--white);
-    top: 185px;
+    top: 215px;
     right: 20px;
     font-size: .8rem;
-    width: 300px;
-    font-weight: 800;
+    font-weight: 300;
     text-transform: capitalize;
-    background: red;
-    width: 135px;
+    background: #ec1313;
+    width: 115px;
+    cursor: pointer;
 }
 
-.label{
+.secondBanner .secondContent .contentBx .images .label{
     position: absolute;
     background: orange;
     color: var(--white);
@@ -553,54 +560,68 @@ header .header-1 .searchMobile{
     padding: 10px;
     border-radius: 5px;
     text-transform: capitalize;
+    cursor: default;
 }
 
 .secondBanner .secondContent .contentBx .images .watch span:nth-child(3) i{
     color: yellow;
 }
 
-/* List anime */
-.listAnime{
-    margin-top: -15px;
-    position: relative;
+.secondBanner .secondContent .contentBx .images .overlayGradient{
+    background: linear-gradient(rgba(217, 217, 217, .9), rgba(0, 0, 0, .9));
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    opacity: 40%;
 }
 
-.lists{
+/* List anime */
+
+.listAnime{
+    margin-top: -50px;
+}
+
+.listAnime .contentAnime{
     background: var(--content);
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));
-    padding: 20px; 
+    padding: 20px 20px;
     max-width: 900px;
 }
 
-.listAnime .lists .content{
+.listAnime .contentAnime h3{
+    color: var(--primary-font);
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.listAnime .contentAnime .contentBox{
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 20px;
+}
+
+.listAnime .contentAnime .contentBox .cards{
+    position: relative;
     display: flex;
-    flex-direction: row;
-    padding: 10px;
+    flex-direction: row
 }
 
-.listAnime .lists .content .images{
+
+.listAnime .contentAnime .contentBox .cards .contentText h4{
+    width: 170px;
+    overflow: hidden;
+}
+
+.listAnime .contentAnime .contentBox .cards .images{
+    position: relative;
     margin-right: 10px;
-    width: 200px;
-    height: 130px;
+    width: 150px;
+    height: 150px;
 }
 
-.listAnime .lists .content .images img{
-    margin-right: 10px;
-    width: 100%;
-    height: 100%;
+.listAnime .contentAnime .contentBox .cards .images img{
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -647,19 +668,11 @@ header .header-1 .searchMobile{
         display: none;
     }
 
-
     /* Second banner */
     .secondBanner{
         margin-top: -5rem;
     }
 
-    .lists{
-        background: var(--content);
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
-        max-width: 900px;
-    }
-    
 }
 
 
@@ -689,25 +702,17 @@ header .header-1 .searchMobile{
         height: 250px;
     }
 
-    .lists{
-        background: var(--content);
+    .listAnime .contentAnime .contentBox .cards{
+        position: relative;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-        max-width: 900px;
-    }
-
-    .listAnime .lists .content{
-        display: flex;
         flex-direction: column;
-        padding: 10px 20px;
     }
-    
 }
 
 
 @media(max-width:498px){
     header .header-1 .logo{
-        margin-left: 10%;
+        margin-left: -2%;
     }
 
     .bannerAnime .boxContent{
@@ -727,26 +732,24 @@ header .header-1 .searchMobile{
         height: 250px;
     }
 
-    .listAnime .lists .content{
-        display: flex;
-        flex-direction: column;
-        padding: 10px 5px;
-    }
-
-    .lists{
+    .listAnime .contentAnime{
         background: var(--content);
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 3fr));
+        padding: 10px 10px;
         max-width: 900px;
-        padding: 2px; 
     }
 
-    .listAnime .lists .content .images{
-        margin-right: 10px;
-        width: 130px;
-        height: 130px;
+    .listAnime .contentAnime .contentBox .cards .contentText{
+        margin-top: -20px;
+        overflow: hidden;
     }
-    
-
-    
 }
+
+@media(max-width:390px){
+    .listAnime .contentAnime .contentBox{
+        position: relative;
+        display: grid;
+        grid-template-columns: auto;
+        grid-row-gap: 20px;
+    }
+}
+
