--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --content:#222222;
     --primary-font:#b7b7b7;
     --muted-font:#888888;
+    --label-color:#e0ac00;
 }
 
 *{
@@ -375,10 +376,11 @@ header .header-1 .searchMobile{
 
 .bannerAnime .boxContent .contentImg .rating span:nth-child(1){
     color: var(--white);
-    background: orange;
+    background: var(--label-color);
     padding: 3px;
     position: absolute;
-    left:0;
+    font-size: .8rem;
+    left:6px;
 }
 
 .bannerAnime .boxContent .contentImg .rating span:nth-child(2){
@@ -395,7 +397,7 @@ header .header-1 .searchMobile{
     color: var(--white);
     background: rgba(0, 0, 0, 0.9);
     padding: 3px;
-    color: yellow;
+    color: var(--label-color);
 }
 /* End Overlay Banner 1 */
 
@@ -561,10 +563,11 @@ header .header-1 .searchMobile{
     border-radius: 5px;
     text-transform: capitalize;
     cursor: default;
+    font-size: .8rem;
 }
 
 .secondBanner .secondContent .contentBx .images .watch span:nth-child(3) i{
-    color: yellow;
+    color: var(--label-color);
 }
 
 .secondBanner .secondContent .contentBx .images .overlayGradient{
@@ -586,7 +589,41 @@ header .header-1 .searchMobile{
     background: var(--content);
     padding: 20px 20px;
     max-width: 900px;
+    position: relative;
 }
+
+.listAnime .contentAnime .paging{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+}
+
+.listAnime .contentAnime .paging ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.listAnime .contentAnime .paging ul li{
+    margin-right: 10px;
+    text-transform: capitalize;
+    color: var(--muted-font);
+    border: 1px solid var(--muted-font);
+    padding: 5px 10px;
+    font-size: .8rem;
+    margin-top: 5px;
+}
+/* 
+.listAnime .contentAnime:after{
+    content: '';
+    background: var(--muted-font);
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+} */
 
 .listAnime .contentAnime h3{
     color: var(--primary-font);
@@ -604,13 +641,28 @@ header .header-1 .searchMobile{
 .listAnime .contentAnime .contentBox .cards{
     position: relative;
     display: flex;
-    flex-direction: row
+    flex-direction: row;
+    padding: 2px;
 }
 
 
 .listAnime .contentAnime .contentBox .cards .contentText h4{
     width: 170px;
     overflow: hidden;
+    color: var(--primary-font);
+}
+.listAnime .contentAnime .contentBox .cards .contentText h5{
+    color: var(--muted-font);
+    text-transform: capitalize;
+}
+.listAnime .contentAnime .contentBox .cards .contentText h6{
+    color: var(--muted-font);
+    text-transform: capitalize;
+}
+.listAnime .contentAnime .contentBox .cards .contentText p{
+    font-size: .8rem;
+    color: var(--muted-font);
+    text-transform: capitalize;
 }
 
 .listAnime .contentAnime .contentBox .cards .images{
@@ -618,12 +670,19 @@ header .header-1 .searchMobile{
     margin-right: 10px;
     width: 150px;
     height: 100px;
+    overflow: hidden;
+}
+
+.listAnime .contentAnime .contentBox .cards .images:hover img{
+    transform: scale(1.2);
+    transition: .8s;
 }
 
 .listAnime .contentAnime .contentBox .cards .images img{
     width: 100%;
     height: 100%;
 }
+
 
 
 
@@ -696,7 +755,7 @@ header .header-1 .searchMobile{
     }
 
     .bannerAnime .boxContent .contentImg .rating span:nth-child(2){
-        left:5.9rem ;
+        left:6rem ;
     }
 
     .secondBanner .secondContent .contentBx{
@@ -726,7 +785,7 @@ header .header-1 .searchMobile{
     }
 
     .bannerAnime .boxContent .contentImg .rating span:nth-child(2){
-        left:5.5rem ;
+        left:6rem ;
     }
 
     .secondBanner .secondContent .contentBx{
@@ -736,7 +795,7 @@ header .header-1 .searchMobile{
 
     .listAnime .contentAnime{
         background: var(--content);
-        padding: 10px 25px;
+        padding: 10px 10px;
         max-width: 900px;
     }
 
@@ -751,7 +810,13 @@ header .header-1 .searchMobile{
         width: 110px;
         overflow: hidden;
     }
+}
 
+@media(max-width:321px){
+    .listAnime .contentAnime .contentBox{
+        grid-template-columns: auto ;
+        grid-row-gap: 20px;
+    }
 }
 
 
