--- a/style.css
+++ b/style.css
@@ -227,7 +227,10 @@ header .header-1 .searchMobile{
 .sidenav ul li{
     margin-bottom: 30px;
     border-bottom: 1px solid var(--light-gray);
-    margin-top: 50px;
+}
+
+.sidenav .listAnime ul li:nth-child(1){
+    margin-top: 60px;
 }
 
 .sidenav ul li:hover{
@@ -667,22 +670,18 @@ header .header-1 input{
 
 .listAnime .contentAnime .paging ul li{
     margin-right: 10px;
-    text-transform: capitalize;
-    color: var(--muted-font);
+    margin-top: 5px;
     border: 1px solid var(--muted-font);
     padding: 5px 10px;
-    font-size: .8rem;
-    margin-top: 5px;
+    color: var(--muted-font);
 }
-/* 
-.listAnime .contentAnime:after{
-    content: '';
-    background: var(--muted-font);
-    width: 100%;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-} */
+
+.listAnime .contentAnime .paging ul li a{
+    text-transform: capitalize;
+    color: var(--muted-font);
+    font-size: .8rem;
+    text-decoration: none;
+}
 
 .listAnime .contentAnime h3{
     color: var(--primary-font);
@@ -705,7 +704,8 @@ header .header-1 input{
 }
 
 
-.listAnime .contentAnime .contentBox .cards .contentText h4{
+.listAnime .contentAnime .contentBox .cards .contentText h4 a{
+    text-decoration: none;
     width: 170px;
     overflow: hidden;
     color: var(--primary-font);
