--- a/style.css
+++ b/style.css
@@ -401,6 +401,11 @@ header .header-1 input{
     font-size: .9rem;
 }
 
+.bannerAnime .boxContent .contentText h4 a{
+    text-decoration: none;
+    color: var(--primary-font);
+}
+
 .bannerAnime .boxContent .contentText p{
     color: var(--muted-font);
     text-transform: capitalize;
@@ -914,6 +919,119 @@ header .header-1 input{
     right: 0;
 }
 
+/*============================================ End Page List Anime======================================================== */
+
+/*============================================ Page Anime======================================================== */
+
+.banners{
+    background: url('img/img3.png');
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center;
+    height: 300px;
+    width: 100%;
+}
+
+.banners .bannerBox{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.banners .bannerBox .bigBanner{
+    background: var(--content);
+    padding: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    width: 900px;
+}
+
+.banners .bannerBox .bigBanner{
+    background: var(--content);
+    padding: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 30px 20px;
+}
+.banners .bannerBox .bigBanner .images{
+    width: 200px;
+    height: 300px;
+}
+
+.banners .bannerBox .bigBanner .images .rating{
+    background: var(--muted-font);
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    flex-wrap:wrap;
+}
+.banners .bannerBox .bigBanner .images .rating span{
+    font-weight: 600;
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+
+.banners .bannerBox .bigBanner .images .rating .star{
+    display:flex;
+    flex-direction:row;
+    list-style: none;
+    color: var(--label-color);
+}
+
+.banners .bannerBox .bigBanner .images img{
+    width: 100%;
+    height: 80%;
+}
+
+.banners .bannerBox .bigBanner .content{
+    position: relative;
+    max-width: 500px;
+    max-height: 450px;
+    overflow: auto;
+
+}
+
+.banners .bannerBox .bigBanner .content h1{
+    color: var(--primary-font);
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.banners .bannerBox .bigBanner .content p{
+    color: var(--muted-font);
+    margin-bottom: 30px;
+}
+
+.banners .bannerBox .bigBanner .content span{
+    color: var(--primary-font);
+    background: var(--muted-font);
+    padding: 10px 15px;
+
+}
+
+.banners .bannerBox .contentSider{
+    background: var(--content);
+    width: 270px;
+    padding: 30px;
+    position: absolute;
+    right: 6%;
+}
+
+/* Anime Info */
+.infosAnime{
+    margin-top: 100px;
+}
+
+.infosAnime .animeInfo{
+    background: var(--content);
+    max-width: 900px;
+    color: var(--primary-font);
+    padding: 20px;
+    position: relative;
+}
 
 
 
@@ -954,8 +1072,12 @@ header .header-1 input{
         display: block;
     }
 
-    .contentSider{
+    .contentSider ,.banners .bannerBox .contentSider{
         display: none;
+    }
+
+    .banners .bannerBox .bigBanner .images{
+    margin-bottom: 30px;
     }
 
     /* Second banner */
@@ -974,7 +1096,12 @@ header .header-1 input{
     .listed .contentSider{
         width: 100%;
     }
+}
 
+@media(max-width:857px){
+    .infosAnime{
+        margin-top: 600px;
+    }
 }
 
 
@@ -1004,11 +1131,19 @@ header .header-1 input{
         height: 250px;
     }
 
+    /* Page 2 List anime */
     .listAnime .contentAnime .contentBox .cards{
         position: relative;
         display: grid;
         flex-direction: column;
     }
+    /* End Page 2 List anime */
+
+      /* Page 3 = anime */
+    .banners .bannerBox .bigBanner .content{
+        margin-top: 30px;
+    }      
+
 }
 
 
