--- a/style.css
+++ b/style.css
@@ -1072,6 +1072,53 @@ header .header-1 input{
 }
 
 
+.videos{
+    position: relative;
+    max-width: 900px;
+    max-height: 600px;
+    position: relative;
+}
+
+video{
+    width: 100%;
+    height: 100%;
+}
+
+.video .videos .frontOver span:nth-child(1){
+    position: absolute;
+    top: 10%;
+    left: 5%;
+}
+.video .videos .frontOver span:nth-child(2){
+    position: absolute;
+    top: 10%;
+    right: 20%;
+    display: block;
+}
+.video .videos .frontOver span:nth-child(3){
+    position: absolute;
+    top: 10%;
+    right: 10%;
+}
+.video .videos .frontOver span:nth-child(4){
+    position: absolute;
+    top: 40%;
+    left: 45%;
+}
+.video .videos .frontOver span:nth-child(5){
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+}
+
+.video .videos .frontOver span:nth-child(6){
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    display: none;
+}
+
+
 
 
 
@@ -1182,6 +1229,26 @@ header .header-1 input{
         margin-top: 30px;
     }      
 
+    .video .videos .frontOver span:nth-child(2){
+        position: absolute;
+        top: 10%;
+        right: 20%;
+        display: none;
+    }
+    .video .videos .frontOver span:nth-child(3){
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        display: none;
+    }
+
+    .video .videos .frontOver span:nth-child(6){
+        position: absolute;
+        top: 10%;
+        right: 5%;
+        display: block;
+    }
+
 }
 
 
@@ -1239,6 +1306,10 @@ header .header-1 input{
     .infosAnime .animeInfo .content .tableInfo .table2 td{
         text-align: right;
         position: relative;
+    }
+
+    .video{
+        margin-top: -250px;
     }
 }
 
