--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ header .header-1 .searchMobile{
 }
 
 
+.prevOption{
+    transform: rotate(180deg);
+}
+
 /* Side Navbar */
 .sidenav{
     background: var(--black);
@@ -515,16 +519,23 @@ header .header-1 input{
     margin-right: 3px;
     cursor: pointer;
     overflow: hidden;
+    width: 65px;
+    height: 80px;
+    object-fit: cover;
+    margin-right: 5px;
 }
 
 .bannerTop .contentSider .siderAnime .content .image:hover img{
     transform: scale(1.1);
     transition: .5s;
+    height: 100%;
+    width: 100%;
 }
 
 .bannerTop .contentSider .siderAnime .content h4{
     color: var(--primary-font);
     text-transform: capitalize;
+    font-size: .8rem;
 }
 
 .bannerTop .contentSider .siderAnime .content h5{
@@ -532,6 +543,7 @@ header .header-1 input{
     margin-top: 7px;
     text-transform: capitalize;
     margin-bottom: 7px;
+    font-size: .7rem;
 }
 
 .bannerTop .contentSider .siderAnime .content p{
@@ -682,22 +694,23 @@ header .header-1 input{
     margin-top: 60px;
 }
 
-.listAnime .contentAnime .paging ul{
+.listAnime .contentAnime .paging ul, .season .contentBanner .paging ul{
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.listAnime .contentAnime .paging ul li{
+.listAnime .contentAnime .paging ul li, .season .contentBanner .paging ul li{
     margin-right: 10px;
     margin-top: 5px;
     border: 1px solid var(--muted-font);
     padding: 5px 10px;
     color: var(--muted-font);
+    text-decoration: none;
 }
 
-.listAnime .contentAnime .paging ul li a{
+.listAnime .contentAnime .paging ul li a, .season .contentBanner .paging ul li a{
     text-transform: capitalize;
     color: var(--muted-font);
     font-size: .8rem;
@@ -723,6 +736,7 @@ header .header-1 input{
     display: flex;
     flex-direction: row;
     padding: 2px;
+    text-transform: capitalize;
 }
 
 .listAnime .contentAnime .contentBox .cards .contentText h4 a{
@@ -1095,31 +1109,53 @@ video{
     height: 100%;
 }
 
+.video .videos .frontOver{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
 .video .videos .frontOver span:nth-child(1){
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 5%;
+    color: var(--white);
+    font-size: 1.5rem;
 }
 .video .videos .frontOver span:nth-child(2){
     position: absolute;
-    top: 10%;
-    right: 20%;
+    top: 4%;
+    right: 25%;
     display: block;
+    font-size: 1.7rem;
+    color: var(--label-color);
 }
 .video .videos .frontOver span:nth-child(3){
     position: absolute;
-    top: 10%;
-    right: 10%;
+    top: 4%;
+    right: 5%;
+    display: block;
+    font-size: 1.7rem;
+    color: var(--label-color);
 }
 .video .videos .frontOver span:nth-child(4){
     position: absolute;
     top: 40%;
     left: 45%;
+    color: var(--white);
+    font-size: 4rem;
 }
+
+.video .videos .frontOver span:nth-child(4):hover{
+    color: red;
+}
+
 .video .videos .frontOver span:nth-child(5){
     position: absolute;
     bottom: 10%;
     left: 5%;
+    font-size: 1.6rem;
 }
 
 .video .videos .frontOver span:nth-child(6){
@@ -1127,6 +1163,7 @@ video{
     top: 10%;
     right: 5%;
     display: none;
+    color: var(--white);
 }
 
 
@@ -1190,16 +1227,23 @@ flex-wrap:wrap;
     border-radius: 3px;
     color: var(--white);
     text-transform: uppercase;
+    font-size: .8rem;
 }
 
 .season .contentBanner .wrapper .boxContent .rating span:nth-child(2){
     position: absolute;
     bottom: 10px;
     right: 10px;
-    background: var(--label-color);
+    background: var(--content);
     padding: 3px;
     border-radius: 3px;
     color: var(--white);
+    font-size: .8rem;
+}
+
+.season .contentBanner .wrapper .boxContent .rating span:nth-child(2) i{
+    color: var(--label-color);
+    margin-right: 5px;
 }
 
 .season .contentBanner .wrapper .boxContent .contentText h4 a{
